--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     --heading-color:#343F52;
     --skyblu: #e5f4fd;
     --white:#fff;
+    --light-gray: #f0f8fe;
+    --gray: #fefefe;
 }
 
 body{
@@ -12,11 +14,176 @@ body{
 
 *{
     box-sizing: border-box;
-    position: relative;
     margin: 0;
     padding: 0;
 }
 
-.hero{
-    background-color: chartreuse;
+h1{
+    font-size: 54px;
+    line-height: 62px;
+    color: var(--heading-color);
+    & span{
+        color: var(--primary-color);
+    }
 }
+
+
+/* .hero{
+    background-color: chartreuse;
+} */
+
+
+h2{
+    color: var(--heading-color);
+    font-size: 42px;
+    line-height: 50px;
+}
+
+
+h3{
+    color: var(--heading-color);
+    font-size: 23px;
+    line-height: 32px;
+}
+
+main{
+    max-width: 1280px;
+    margin: 50px;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0px;
+}
+
+p{
+    color: var(--paragraph-color);
+    font-size: 17px;
+    line-height: 29px;
+}
+
+ul{
+    list-style: none;
+    display: flex;
+    gap: 40px;
+    & li a{
+        text-decoration: none;
+        color: var(--heading-color);
+        font-weight: 600;
+    }
+}
+
+.btn-primary{
+    background-color:var(--primary-color);
+    border-radius: 24px;
+    box-shadow: 1px 01rem 0.5rem 0.5px 0px(60 60 60 / 39%);
+    color: var(--white);
+    display: block;
+    padding: 16px;
+    width: fit-content;
+    text-decoration: none;
+}
+
+
+.hero{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    padding: 60px 0;
+    & h1{
+        max-width: 405px;
+        margin: 20px;
+
+    }
+
+    & p {
+        font-size: 22px;
+        line-height: 34px;
+        margin-bottom: 30px;
+    }
+
+}
+
+/* service-styles */
+
+.services {
+    background-color: var(--light-gray);
+    padding: 50px 0;
+    & h2 {
+        margin-bottom: 70px;
+        max-width: 655px;
+        margin: 0 auto 70px;
+        text-align: center;
+    }
+}
+
+.services-list{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.service-iteam{
+    
+    text-align: center;
+
+    & h3 {
+        margin-bottom: 15px;
+    }
+
+    & a {
+        color: var(--primary-color);
+        text-decoration: underline;
+    }
+
+    & img{
+        min-height: 230px;
+    }
+
+    & p {
+        max-width: 316px;
+        margin: 0 auto 20px;
+    }
+}
+
+/* Testimonials-styles */
+.testimonals{
+    background-color: var(--light-gray);
+    padding: 70px 0px;
+
+    & h2{
+        text-align: center;
+        max-width: 670px;
+        margin: 0 auto 50px;
+    }
+}
+
+
+.testimonals-list{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.testimonals-iteam{
+    background-color: var(--white);
+    padding: 20px;
+
+    & p {
+        font-size: 18px;
+    }
+}
+
+
+.testimonals-author{
+    display: flex;
+    justify-content: flex-start;
+    gap: 30px;
+    margin-top: 30px;
+
+    & img{
+        max-width: 70px;
+    }    
+}
+
+
